--- a/app/src/main/res/layout/activity_patient_classification.xml
+++ b/app/src/main/res/layout/activity_patient_classification.xml
@@ -13,7 +13,7 @@
         style="@style/TextHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Classification"
+        android:text="AI Classification Result"
         android:layout_marginTop="12dp" />
 
     <ImageView
@@ -24,24 +24,27 @@
         android:layout_marginTop="40dp" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="AI Classification Result:"
-        android:layout_marginTop="40dp" />
-
-    <TextView
         android:id="@+id/txt_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This is the result of classification. This is the result of classification. This is the result of classification." />
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:text="Classification"
+        android:layout_marginTop="20dp" />
+
+    <TextView
+        android:id="@+id/txt_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:text="Still not statisfied?"
-        android:layout_marginTop="60dp" />
+        android:layout_marginTop="48dp" />
 
     <Button
         android:id="@+id/btn_consult"
