--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -111,7 +111,7 @@
             android:id="@+id/edt_city"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:inputType="textPassword"
+            android:inputType="text"
             android:padding="0dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -144,6 +144,7 @@
         app:layout_constraintVertical_bias="0">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
+            android:id="@+id/edt_sex"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:inputType="none"
