--- a/app/src/main/res/layout/fragment_dentist_chat.xml
+++ b/app/src/main/res/layout/fragment_dentist_chat.xml
@@ -34,6 +34,7 @@
         android:id="@+id/txt_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black_subtle"
         android:text="Chat empty"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
