--- a/app/src/main/res/layout/fragment_dentist_home.xml
+++ b/app/src/main/res/layout/fragment_dentist_home.xml
@@ -12,8 +12,8 @@
         style="@style/TextHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dashboard"
         android:layout_marginTop="12dp"
+        android:text="Dashboard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +30,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_data"
-        style="@style/CardFilled"
+        style="@style/CardPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -48,28 +48,81 @@
                 style="@style/TextHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="0"
                 android:textColor="@color/white"
-                android:text="\n#" />
+                android:textSize="28sp" />
 
             <TextView
                 style="@style/TextHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="Patients" />
+                android:text="Patients contacted you"
+                android:textColor="@color/white" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
     <Button
-        android:id="@+id/btn_dentist"
+        android:id="@+id/btn_write"
         style="@style/ButtonMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:drawableTop="@drawable/ic_round_time"
-        android:text="Write Blog"
-        android:paddingHorizontal="0dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="4dp"
+        android:drawableTop="@drawable/ic_write"
+        android:text="Write Article"
+        app:layout_constraintEnd_toStartOf="@+id/btn_education"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card_data" />
+
+    <Button
+        android:id="@+id/btn_education"
+        style="@style/ButtonMenu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawableTop="@drawable/ic_newsmode"
+        android:text="Education"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btn_write"
+        app:layout_constraintTop_toBottomOf="@+id/card_data" />
+
+    <TextView
+        android:id="@+id/txt_my_articles"
+        style="@style/TextHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="My Articles"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_write" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_education"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_my_articles"
+        app:layout_constraintVertical_bias="0"
+        tools:listitem="@layout/item_article" />
+
+    <TextView
+        android:id="@+id/txt_start_write"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="@color/black_subtle"
+        android:text="Tap on \'Write Article\' to begin \ncreating your educational article"
+        android:paddingBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_my_articles" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
