--- a/app/src/main/res/layout/fragment_patient_capture.xml
+++ b/app/src/main/res/layout/fragment_patient_capture.xml
@@ -19,9 +19,9 @@
 
     <ImageView
         android:id="@+id/img_teeth"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:src="@drawable/placeholder"
+        android:layout_width="240dp"
+        android:layout_height="240dp"
+        android:src="@drawable/ic_capture"
         app:layout_constraintBottom_toTopOf="@+id/txt_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
