--- a/app/src/main/res/layout/fragment_patient_search_dentist.xml
+++ b/app/src/main/res/layout/fragment_patient_search_dentist.xml
@@ -28,58 +28,58 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txt_title" />
 
-    <TextView
-        android:id="@+id/txt_nearest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nearest dentist"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_title" />
+<!--    <TextView-->
+<!--        android:id="@+id/txt_nearest"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Nearest dentist"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/txt_title" />-->
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_map"
-        style="@style/CardFilled"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_nearest">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                style="@style/TextHeader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="\n\n\n" />
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+<!--    <com.google.android.material.card.MaterialCardView-->
+<!--        android:id="@+id/card_map"-->
+<!--        style="@style/CardFilled"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="12dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/txt_nearest">-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical">-->
+<!--            <TextView-->
+<!--                style="@style/TextHeader"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="\n\n\n" />-->
+<!--        </LinearLayout>-->
+<!--    </com.google.android.material.card.MaterialCardView>-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:hintEnabled="false"
         android:layout_margin="12dp"
+        app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_map">
+        app:layout_constraintTop_toBottomOf="@+id/txt_title">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_search"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:drawableStart="@drawable/ic_round_search"
-            android:drawableTint="@color/primary"
             android:drawablePadding="8dp"
-            android:imeOptions="actionSearch"
-            android:letterSpacing="0.0"
-            android:inputType="text"
+            android:drawableTint="@color/primary"
             android:hint="Search"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:letterSpacing="0.0"
             android:padding="0dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
