--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FFFFFFFF</color>
-    <color name="black">#FF000000</color>
     <color name="white_subtle">#77FFFFFF</color>
-    <color name="black_subtle">#AA000000</color>
+    <color name="white_variant">#FFF2FAF6</color>
+    <color name="black">#FF000000</color>
+    <color name="black_subtle">#88000000</color>
     <color name="primary">#FF27C797</color>
 </resources>
