--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,14 +15,15 @@
 
     <!-- Button -->
     <style name="ButtonPrimary" parent="Widget.Material3.Button">
-        <item name="android:ems">12</item>
+        <item name="android:minEms">12</item>
     </style>
     <style name="ButtonSecondary" parent="Widget.Material3.Button.OutlinedButton">
-        <item name="android:ems">12</item>
+        <item name="android:minEms">12</item>
+        <item name="strokeColor">@color/primary</item>
     </style>
     <style name="ButtonTertiary" parent="Widget.Material3.FloatingActionButton.Tertiary"/>
     <style name="ButtonMenu" parent="Widget.Material3.Button.TonalButton">
-        <item name="drawableTint">@color/primary</item>
+        <item name="backgroundTint">@color/white_variant</item>
         <item name="cornerRadius">12dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:ems">7</item>
@@ -38,10 +39,11 @@
     </style>
 
     <!-- Card -->
-    <style name="CardFilled" parent="Widget.Material3.CardView.Filled">
+    <style name="CardPrimary" parent="Widget.Material3.CardView.Filled">
         <item name="cardBackgroundColor">@color/primary</item>
     </style>
-    <style name="CardOutlined" parent="Widget.Material3.CardView.Outlined">
+    <style name="CardSecondary" parent="Widget.Material3.CardView.Filled">
         <item name="cardCornerRadius">4dp</item>
+        <item name="cardBackgroundColor">@color/white_variant</item>
     </style>
 </resources>
