--- a/app/src/main/res/layout/activity_dentist_location.xml
+++ b/app/src/main/res/layout/activity_dentist_location.xml
@@ -13,55 +13,52 @@
         android:id="@+id/txt_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="40dp"
         android:text="Location"
         style="@style/TextHeader" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter your clinic location" />
+        android:textSize="16sp"
+        android:text="Clinic name" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        app:hintEnabled="false">
+        android:layout_marginBottom="24dp">
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edt_address"
+            android:id="@+id/edt_clinic_name"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:padding="0dp"
-            android:inputType="textCapWords"
-            android:hint="Address"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/box_building_num"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:hintEnabled="false">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edt_building_num"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:padding="0dp"
-            android:inputType="textCapWords"
-            android:hint="Building number (optional)"/>
+            android:inputType="textCapWords"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:text="Make sure the location you entered is correct in the map shown above." />
+        android:textSize="16sp"
+        android:text="Clinic address" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/box_clinic_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_clinic_address"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:padding="0dp"
+            android:inputType="textCapWords"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btn_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
         style="@style/ButtonPrimary"
         android:text="Register" />
 
