--- a/app/src/main/res/layout/fragment_dentist_home.xml
+++ b/app/src/main/res/layout/fragment_dentist_home.xml
@@ -45,6 +45,7 @@
             android:padding="16dp">
 
             <TextView
+                android:id="@+id/txt_count"
                 style="@style/TextHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -103,7 +104,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_education"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
