--- a/app/src/main/res/layout/fragment_patient_history.xml
+++ b/app/src/main/res/layout/fragment_patient_history.xml
@@ -20,7 +20,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_classification_history"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
         android:id="@+id/txt_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Classification from \'Capture\' will\nshow up here"
+        android:text="Dental check from \'Capture\' will\nshow up here"
         android:textAlignment="center"
         android:textColor="@color/black_subtle"
         app:layout_constraintBottom_toBottomOf="parent"
