--- a/app/src/main/res/layout/fragment_dentist_home.xml
+++ b/app/src/main/res/layout/fragment_dentist_home.xml
@@ -103,7 +103,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_education"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
