--- a/app/src/main/res/layout/fragment_patient_search_dentist.xml
+++ b/app/src/main/res/layout/fragment_patient_search_dentist.xml
@@ -64,6 +64,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
+        app:endIconDrawable="@drawable/ic_round_search"
+        app:endIconMode="custom"
         app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,9 +75,6 @@
             android:id="@+id/edt_search"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:drawableStart="@drawable/ic_round_search"
-            android:drawablePadding="8dp"
-            android:drawableTint="@color/primary"
             android:hint="Search"
             android:imeOptions="actionSearch"
             android:inputType="text"
