enable edit profile

--- a/app/src/main/res/layout/activity_dentist_location.xml
+++ b/app/src/main/res/layout/activity_dentist_location.xml
@@ -23,7 +23,7 @@
         android:text="Clinic name" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/box_address"
+        android:id="@+id/box_clinic_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp">
