extract string resources

--- a/app/src/main/res/layout/activity_education_list.xml
+++ b/app/src/main/res/layout/activity_education_list.xml
@@ -11,7 +11,7 @@
         style="@style/TextHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Education"
+        android:text="@string/education"
         android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
             android:id="@+id/edt_search"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:hint="Search"
+            android:hint="@string/search"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:letterSpacing="0.0"
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black_subtle"
-        android:text="Article not found"
+        android:text="@string/article_not_found"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
