--- a/app/src/main/res/layout/activity_write_education.xml
+++ b/app/src/main/res/layout/activity_write_education.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primary"
-        android:text="Write education"
+        android:text="@string/write_education"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:hint="Article Title"
+        android:hint="@string/article_title"
         android:textSize="24sp"
         android:maxLines="2"
         android:inputType="textCapWords"
@@ -44,7 +44,7 @@
         android:background="@color/white"
         android:gravity="top"
         android:textSize="16sp"
-        android:hint="Article content"
+        android:hint="@string/article_content"
         android:inputType="textLongMessage|textMultiLine|textCapSentences"
         android:paddingHorizontal="16dp"
         android:paddingVertical="8dp"
@@ -63,7 +63,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginVertical="4dp"
         android:minEms="0"
-        android:text="Cancel"
+        android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent" />
@@ -77,7 +77,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginVertical="4dp"
         android:minEms="0"
-        android:text="Save"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2" />
