--- a/app/src/main/res/layout/fragment_patient_history.xml
+++ b/app/src/main/res/layout/fragment_patient_history.xml
@@ -11,7 +11,7 @@
         style="@style/TextHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Capture History"
+        android:text="@string/capture_history"
         android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
         android:id="@+id/txt_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dental check from \'Capture\' will\nshow up here"
+        android:text="@string/capture_history_empty"
         android:textAlignment="center"
         android:textColor="@color/black_subtle"
         app:layout_constraintBottom_toBottomOf="parent"
