--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Contact Name"
+            android:text="@string/name"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/txt_info"
             app:layout_constraintStart_toEndOf="@+id/img_profile"
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Info"
+            android:text="@string/info"
             android:textColor="@color/black_subtle"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
