--- a/app/src/main/res/layout/activity_dentist_location.xml
+++ b/app/src/main/res/layout/activity_dentist_location.xml
@@ -14,13 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:text="Location"
+        android:text="@string/location"
         style="@style/TextHeader" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Clinic name" />
+        android:text="@string/clinic_name" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_clinic_name"
@@ -38,7 +38,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Clinic address" />
+        android:text="@string/clinic_address" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_clinic_address"
@@ -58,6 +58,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         style="@style/ButtonPrimary"
-        android:text="Register" />
+        android:text="@string/register" />
 
 </LinearLayout>
