--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,14 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:text="Log In"
+        android:text="@string/log_in"
         style="@style/TextHeader" />
 
     <TextView
         android:id="@+id/txt_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Email" />
+        android:text="@string/email" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_email"
@@ -40,7 +40,7 @@
         android:id="@+id/txt_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Password"/>
+        android:text="@string/password"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_password"
@@ -61,6 +61,6 @@
         android:layout_height="wrap_content"
         style="@style/ButtonPrimary"
         android:layout_marginTop="52dp"
-        android:text="Log In" />
+        android:text="@string/log_in" />
 
 </LinearLayout>
