--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -12,15 +12,8 @@
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to Smiley!"
+        android:text="@string/on_boarding_title"
         style="@style/TextHeader" />
-
-<!--    <ImageView-->
-<!--        android:id="@+id/img_illust"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:scaleType="centerCrop"-->
-<!--        android:src="@drawable/placeholder" />-->
 
     <TextView
         android:id="@+id/txt_subtitle"
@@ -29,20 +22,20 @@
         android:textAlignment="center"
         android:layout_marginHorizontal="40dp"
         android:layout_marginBottom="40dp"
-        android:text="Smiley is a smart dental app that helps you manage your dental hygiene. Please login or sign up to continue" />
+        android:text="@string/on_boarding_subtitle" />
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/ButtonPrimary"
-        android:text="Log In" />
+        android:text="@string/log_in" />
 
     <Button
         android:id="@+id/btn_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/ButtonSecondary"
-        android:text="Sign Up" />
+        android:text="@string/sign_up" />
 
 </LinearLayout>
