--- a/app/src/main/res/layout/activity_read_education.xml
+++ b/app/src/main/res/layout/activity_read_education.xml
@@ -18,26 +18,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
-            android:text="Title" />
+            android:text="@string/article_title" />
 
         <TextView
             android:id="@+id/txt_writer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Writer name" />
+            android:text="@string/name" />
 
         <TextView
             android:id="@+id/txt_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="22 Desember 2202" />
+            android:text="@string/date" />
 
         <TextView
             android:id="@+id/txt_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="content"/>
+            android:text="@string/article_content"/>
 
     </LinearLayout>
 
