--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,14 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:text="Register"
+        android:text="@string/register"
         style="@style/TextHeader" />
 
     <TextView
         android:id="@+id/txt_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Name" />
+        android:text="@string/name" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_name"
@@ -40,7 +40,7 @@
         android:id="@+id/txt_city"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="City" />
+        android:text="@string/city" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_city"
@@ -59,7 +59,7 @@
         android:id="@+id/txt_sex"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sex" />
+        android:text="@string/sex" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_sex"
@@ -80,7 +80,7 @@
         android:id="@+id/txt_age"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Age" />
+        android:text="@string/age" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_age"
@@ -99,7 +99,7 @@
         android:id="@+id/txt_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Email" />
+        android:text="@string/email" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_email"
@@ -118,7 +118,7 @@
         android:id="@+id/txt_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Password" />
+        android:text="@string/password" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_password"
@@ -137,7 +137,7 @@
         android:id="@+id/txt_confirm_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Confirm Password" />
+        android:text="@string/confirm_password" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_confirm_password"
@@ -157,6 +157,6 @@
         android:layout_height="wrap_content"
         style="@style/ButtonPrimary"
         android:layout_marginTop="52dp"
-        android:text="Create Account" />
+        android:text="@string/create_account" />
 
 </LinearLayout>
