--- a/app/src/main/res/layout/fragment_dentist_home.xml
+++ b/app/src/main/res/layout/fragment_dentist_home.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="Dashboard"
+        android:text="@string/dashboard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="0"
+                android:text="@string/_0"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
 
@@ -58,7 +58,7 @@
                 style="@style/TextHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Patients contacted you"
+                android:text="@string/patients_contacted_you"
                 android:textColor="@color/white" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:drawableTop="@drawable/ic_write"
-        android:text="Write Article"
+        android:text="@string/write_article"
         app:layout_constraintEnd_toStartOf="@+id/btn_education"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/ic_newsmode"
-        android:text="Education"
+        android:text="@string/education"
         android:layout_marginTop="4dp"
         android:layout_marginStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         style="@style/TextHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Articles"
+        android:text="@string/my_articles"
         android:layout_marginTop="20dp"
         android:layout_marginStart="4dp"
         app:layout_constraintStart_toStartOf="parent"
