--- a/app/src/main/res/layout/fragment_patient_search_dentist.xml
+++ b/app/src/main/res/layout/fragment_patient_search_dentist.xml
@@ -11,7 +11,7 @@
         style="@style/TextHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dentist"
+        android:text="@string/dentist"
         android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,37 +27,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/txt_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txt_title" />
-
-<!--    <TextView-->
-<!--        android:id="@+id/txt_nearest"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Nearest dentist"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/txt_title" />-->
-
-<!--    <com.google.android.material.card.MaterialCardView-->
-<!--        android:id="@+id/card_map"-->
-<!--        style="@style/CardFilled"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="12dp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/txt_nearest">-->
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical">-->
-<!--            <TextView-->
-<!--                style="@style/TextHeader"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="\n\n\n" />-->
-<!--        </LinearLayout>-->
-<!--    </com.google.android.material.card.MaterialCardView>-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box_search"
@@ -75,7 +44,7 @@
             android:id="@+id/edt_search"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:hint="Search"
+            android:hint="@string/search"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:letterSpacing="0.0"
@@ -98,7 +67,7 @@
         android:id="@+id/txt_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dentist not found"
+        android:text="@string/dentist_not_found"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
