--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="12dp"
-                android:text="Placeholder" />
+                android:text="@string/lorem_ipsum" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
