--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -31,7 +31,7 @@
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="12dp"
                 android:textColor="@color/white"
-                android:text="Placeholder" />
+                android:text="@string/lorem_ipsum" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
